Fix slider overlap error

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,7 +5,7 @@
     border: 2px solid black;
   }
 
-  canvas { position: absolute; }
+  #stage canvas { position: absolute; }
   #background-canvas { z-index: 1; }
   #plane-canvas { z-index: 2; }
   #propeller-canvas { z-index: 3; }
